[project]
name = "submission"
version = "0.1.0"
requires-python = ">=3.10"

# You can add dependencies with `aqora add`
dependencies = [
  "pip>=24.3.1",
  "python-dotenv>=1.0.1",
  "qiskit[visualization]>=1.3.0",
  "qiskit-aer>=0.15.1",
  "qiskit-ibm-runtime>=0.34.0",
  "qiskit-ibm-transpiler>=0.9.1",
  "qiskit-ibm-catalog>=0.2.0",
  "qiskit-addon-utils>=0.1.0",
  "qiskit-serverless>=0.18.0",
  "qiskit-addon-sqd>=0.8.1",
  "qiskit-addon-obp>=0.1.0",
  "qiskit-ibm-catalog>=0.2.0",
  "qc-grader@https://github.com/qiskit-community/Quantum-Challenge-Grader.git",
]

[build-system]
requires = ["uv>=0.4.20", "setuptools>=75", "wheel>=0.44"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["."]
[tool.setuptools.package-data]
submission = ["*"]

[tool.aqora]
type = "submission"
competition = "ibm-q2b-qiskit-functions"
